--- a/index.html
+++ b/index.html
@@ -11,21 +11,64 @@
 
 <body>
     <header>
-        <!-- logo -->
-        <div class="logo"><a href="#"><i class="fa-solid fa-bag-shopping"></i> Bag</a>
+        <!-- top banner -->
+        <div class="top-banner">
+            <p>LAUNCH SALE | Flat 10% off | Promo Code: V10 | Offer Ends In: <span class="countdown">02H 00M 00S</span></p>
         </div>
+    </header>
+
+    <nav class="navbar-main">
+        <!-- logo -->
+        <div class="logo"><a href="#">MARQUISE</a></div>
+
+        <!-- nav list -->
+        <ul class="navbar">
+            <li><a href="#home">HOME</a></li>
+            <li class="collections-menu">
+                <a href="#collections">COLLECTIONS</a>
+                <div class="dropdown-menu">
+                    <a href="#all" class="dropdown-item">
+                        <i class="fa-solid fa-border-all"></i>
+                        <span>All</span>
+                    </a>
+                    <a href="#tote" class="dropdown-item">
+                        <i class="fa-solid fa-bag-shopping"></i>
+                        <span>Tote Bag</span>
+                    </a>
+                    <a href="#shoulder" class="dropdown-item">
+                        <i class="fa-solid fa-person-hiking"></i>
+                        <span>Shoulder Bag</span>
+                    </a>
+                    <a href="#hand" class="dropdown-item">
+                        <i class="fa-solid fa-hand"></i>
+                        <span>Hand Bag</span>
+                    </a>
+                    <a href="#crossbody" class="dropdown-item">
+                        <i class="fa-solid fa-satchel"></i>
+                        <span>Cross Body Bag</span>
+                    </a>
+                    <a href="#accessories" class="dropdown-item">
+                        <i class="fa-solid fa-ring"></i>
+                        <span>Accessories</span>
+                    </a>
+                    <a href="#pouches" class="dropdown-item">
+                        <i class="fa-solid fa-rectangle"></i>
+                        <span>Pouches</span>
+                    </a>
+                </div>
+            </li>
+            <li><a href="#contact">CONTACT US</a></li>
+        </ul>
 
         <!-- menu icon  -->
         <i class="fa-solid fa-bars" id="menu-icon"></i>
-        <!-- nav list -->
-        <ul class="navbar">
-            <li><a href="#home">Home</a></li>
-            <li><a href=""></a></li>
-        </ul>
 
         <!-- right icons -->
         <div class="header-icon">
             <i class="fa-solid fa-magnifying-glass" id="search-icon"></i>
+            <button class="user-btn" id="user-btn">
+                <i class="fa-solid fa-user"></i>
+            </button>
             <i class="fa-solid fa-cart-shopping"><span>0</span></i>
         </div>
 
@@ -33,8 +76,7 @@
         <div class="search-box">
             <input type="text" placeholder="Search...">
         </div>
-
-    </header>
+    </nav>
 
     <!-- home  -->
     <section class="home" id="home">
@@ -44,24 +86,306 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem iste quos, qui incidunt minima saepe.</p>
             <a href="#" class="btn">Shop Now</a>
         </div>
-        <!-- home image -->
-        <div class="home-img">
-            <img src="images/home-img.png" alt="">
-
+        <!-- hero slider -->
+        <div class="hero-slider">
+            <div class="slider-container">
+                <div class="slide active">
+                    <img src="img/hero.jpeg" alt="Premium Collection">
+                    <div class="slide-text">Premium Collection</div>
+                </div>
+                <div class="slide">
+                    <img src="img/hero (1).jpeg" alt="Elegant Designs">
+                    <div class="slide-text">Elegant Designs</div>
+                </div>
+                <div class="slide">
+                    <img src="img/hero (2).jpeg" alt="Luxury Bags">
+                    <div class="slide-text">Luxury Bags</div>
+                </div>
+                <div class="slide">
+                    <img src="img/hero (3).jpeg" alt="Summer Collection">
+                    <div class="slide-text">Summer Collection</div>
+                </div>
+                <div class="slide">
+                    <img src="img/hero (4).jpeg" alt="Style & Comfort">
+                    <div class="slide-text">Style & Comfort</div>
+                </div>
+            </div>
+            <!-- <div class="slider-indicators">
+                <span class="indicator active" onclick="currentSlide(0)"></span>
+                <span class="indicator" onclick="currentSlide(1)"></span>
+                <span class="indicator" onclick="currentSlide(2)"></span>
+                <span class="indicator" onclick="currentSlide(3)"></span>
+                <span class="indicator" onclick="currentSlide(4)"></span>
+            </div> -->
+        </div>
     </section>
-    <footer>
-        <div class="container">
 
+    <!-- Featured Products Section -->
+    <section class="featured-products" id="featured">
+        <div class="section-header">
+            <h2>Featured Products</h2>
+            <p>Discover our latest and most popular collections</p>
         </div>
-        <div class="container">
-            <a href="https://www.facebook.com"><i class="fa-brands fa-facebook"></i></a>
-            <a href="https://www.twitter.com"><i class="fa-brands fa-twitter"></i></a>
-            <a href="https://www.instagram.com"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://www.tiktok.com"><i class="fa-brands fa-tiktok"></i></a>
-            <a href="https://www.pinterest.com"><i class="fa-brands fa-pinterest"></i></a>
-            <a href="https://www.youtube.com"><i class="fa-brands fa-youtube"></i></a>
+
+        <!-- Tote Bags -->
+        <div class="product-category">
+            <h3><i class="fa-solid fa-bag-shopping"></i> Tote Bags</h3>
+            <div class="products-grid">
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="img/tote.jpeg" alt="Classic Tote">
+                    </div>
+                    <h4>Classic Tote</h4>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="img/tote (2).jpeg" alt="Modern Tote">
+                    </div>
+                    <h4>Modern Tote</h4>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="img/tote (4).jpeg" alt="Premium Tote">
+                    </div>
+                    <h4>Premium Tote</h4>
+                </div>
+            </div>
         </div>
-    </footer>
+
+        <!-- Shoulder Bags -->
+        <div class="product-category">
+            <h3><i class="fa-solid fa-person-hiking"></i> Shoulder Bags</h3>
+            <div class="products-grid">
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="img/shoulder.jpeg" alt="Elegant Shoulder">
+                    </div>
+                    <h4>Elegant Shoulder</h4>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="img/shoulder (2).jpeg" alt="Casual Shoulder">
+                    </div>
+                    <h4>Casual Shoulder</h4>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="img/shoulder (4).jpeg" alt="Designer Shoulder">
+                    </div>
+                    <h4>Designer Shoulder</h4>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="img/shoulder (5).jpeg" alt="Trendy Shoulder">
+                    </div>
+                    <h4>Trendy Shoulder</h4>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="img/shoulder (6).jpeg" alt="Luxury Shoulder">
+                    </div>
+                    <h4>Luxury Shoulder</h4>
+                </div>
+            </div>
+        </div>
+
+        <!-- Hand Bags -->
+        <div class="product-category">
+            <h3><i class="fa-solid fa-hand"></i> Hand Bags</h3>
+            <div class="products-grid">
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="img/hand.jpeg" alt="Classic Hand">
+                    </div>
+                    <h4>Classic Hand</h4>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="img/hand (2).jpeg" alt="Stylish Hand">
+                    </div>
+                    <h4>Stylish Hand</h4>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="img/hand (3).jpeg" alt="Modern Hand">
+                    </div>
+                    <h4>Modern Hand</h4>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="img/hand (4).jpeg" alt="Elegant Hand">
+                    </div>
+                    <h4>Elegant Hand</h4>
+                </div>
+            </div>
+        </div>
+
+        <!-- Cross Body Bags -->
+        <div class="product-category">
+            <h3><i class="fa-solid fa-satchel"></i> Cross Body Bags</h3>
+            <div class="products-grid">
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="img/cross body.jpeg" alt="Adventure Cross Body">
+                    </div>
+                    <h4>Adventure Cross Body</h4>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="img/cross body (2).jpeg" alt="Urban Cross Body">
+                    </div>
+                    <h4>Urban Cross Body</h4>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="img/cross body (3).jpeg" alt="Travel Cross Body">
+                    </div>
+                    <h4>Travel Cross Body</h4>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="img/cross body (4).jpeg" alt="Casual Cross Body">
+                    </div>
+                    <h4>Casual Cross Body</h4>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="img/cross body (5).jpeg" alt="Premium Cross Body">
+                    </div>
+                    <h4>Premium Cross Body</h4>
+                </div>
+            </div>
+        </div>
+
+        <!-- Accessories -->
+        <div class="product-category">
+            <h3><i class="fa-solid fa-ring"></i> Accessories</h3>
+            <div class="products-grid">
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="img/accessories.jpeg" alt="Gold Accessory">
+                    </div>
+                    <h4>Gold Accessory</h4>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="img/accessories (1).jpeg" alt="Silver Accessory">
+                    </div>
+                    <h4>Silver Accessory</h4>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="img/accessories (2).jpeg" alt="Leather Accessory">
+                    </div>
+                    <h4>Leather Accessory</h4>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="img/accessories (3).jpeg" alt="Charm Set">
+                    </div>
+                    <h4>Charm Set</h4>
+                </div>
+            </div>
+        </div>
+
+        <!-- Pouches -->
+        <div class="product-category">
+            <h3><i class="fa-solid fa-rectangle"></i> Pouches</h3>
+            <div class="products-grid">
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="img/pouches.jpeg" alt="Compact Pouch">
+                    </div>
+                    <h4>Compact Pouch</h4>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="img/pouches (2).jpeg" alt="Travel Pouch">
+                    </div>
+                    <h4>Travel Pouch</h4>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="img/pouches (3).jpeg" alt="Luxury Pouch">
+                    </div>
+                    <h4>Luxury Pouch</h4>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="img/pouches (4).jpeg" alt="Everyday Pouch">
+                    </div>
+                    <h4>Everyday Pouch</h4>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="img/pouches (5).jpeg" alt="Premium Pouch">
+                    </div>
+                    <h4>Premium Pouch</h4>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Authentication Modal -->
+    <div class="auth-modal" id="auth-modal">
+        <div class="auth-modal-content">
+            <button class="auth-modal-close" id="auth-close">
+                <i class="fa-solid fa-xmark"></i>
+            </button>
+
+            <!-- Sign In Form -->
+            <div class="auth-form active" id="signin-form">
+                <h2>Sign In</h2>
+                <form>
+                    <div class="form-group">
+                        <label for="signin-email">Email</label>
+                        <input type="email" id="signin-email" placeholder="Enter your email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="signin-password">Password</label>
+                        <input type="password" id="signin-password" placeholder="Enter your password" required>
+                    </div>
+                    <button type="submit" class="auth-btn">Sign In</button>
+                </form>
+                <p class="auth-toggle">Don't have an account? <a href="#" onclick="toggleAuthForm(event)">Sign Up</a></p>
+            </div>
+
+            <!-- Sign Up Form -->
+            <div class="auth-form" id="signup-form">
+                <h2>Sign Up</h2>
+                <form>
+                    <div class="form-group">
+                        <label for="signup-username">Username</label>
+                        <input type="text" id="signup-username" placeholder="Choose a username" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="signup-email">Email</label>
+                        <input type="email" id="signup-email" placeholder="Enter your email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="signup-password">Password</label>
+                        <input type="password" id="signup-password" placeholder="Create a password" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="signup-confirm">Confirm Password</label>
+                        <input type="password" id="signup-confirm" placeholder="Confirm your password" required>
+                    </div>
+                    <button type="submit" class="auth-btn">Sign Up</button>
+                </form>
+                <p class="auth-toggle">Already have an account? <a href="#" onclick="toggleAuthForm(event)">Sign In</a></p>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+    <div class="whatsapp-container">
+        <a href="https://wa.me/+923243499882" class="whatsapp-btn">
+            <i class="fa-brands fa-whatsapp"></i>
+        </a>
+        <div class="chat-box">
+            <p>Chat with us</p>
+        </div>
+    </div>
     <script src="main.js"></script>
 </body>
 
