updated the contact us links

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     </a>
                 </div>
             </li>
-            <li><a href="#contact">CONTACT US</a></li>
+            <li><a href="https://wa.me/+923243499882" target="_blank">CONTACT</a></li>
         </ul>
 
         <!-- menu icon  -->
@@ -309,7 +309,7 @@
                     <li><a href="#">Terms of Service</a></li>
                     <li><a href="#">Return Policy</a></li>
                     <li><a href="#">Shipping Info</a></li>
-                    <li><a href="#contact">Contact Us</a></li>
+                    <li><a href="https://wa.me/+923243499882" target="_blank">Contact Us</a></li>
                 </ul>
             </div>
             <div class="footer-social">
